--- a/src/First/WelcomePage.form
+++ b/src/First/WelcomePage.form
@@ -53,14 +53,14 @@
     <Component class="try__.ProgressBarCustom" name="loadingbar">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="0" y="450" width="900" height="10"/>
+          <AbsoluteConstraints x="0" y="490" width="900" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Asset/welcome.png"/>
+          <Image iconType="3" name="/Asset/CareerPathX_welcome2.gif"/>
         </Property>
       </Properties>
       <Constraints>
