--- a/src/opening/Signup.form
+++ b/src/opening/Signup.form
@@ -124,6 +124,7 @@
     <Component class="careerpathx.PasswordField" name="signpass">
       <Properties>
         <Property name="labelText" type="java.lang.String" value="Password"/>
+        <Property name="showAndHide" type="boolean" value="true"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
