--- a/src/drawer/Admin.form
+++ b/src/drawer/Admin.form
@@ -170,9 +170,7 @@
         <Component class="try__.BadgeButton" name="noti">
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-                <LineBorder/>
-              </Border>
+              <Border info="null"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/Asset/icons8-notification-30.png"/>
